Added initial logic skill and games scraper

--- a/notebooks/search_skill/01_initial_solution.ipynb
+++ b/notebooks/search_skill/01_initial_solution.ipynb
@@ -13,7 +13,7 @@
     "deepnote_cell_height": 225
    },
    "source": "from time import time\n\nimport json\nimport random\nimport numpy as np\nimport pandas as pd\nimport matplotlib.pyplot as plt\n\nfrom deap import algorithms, base, creator, tools",
-   "execution_count": 1,
+   "execution_count": null,
    "outputs": []
   },
   {
@@ -29,7 +29,6 @@
   },
   {
    "cell_type": "code",
-   "source": "PRODUCTS = pd.read_csv(\"/work/games_seeker/data/interim/pc_components.csv\", sep=\"|\")\nwith open(\"/work/games_seeker/data/interim/products_weights.json\", \"r\") as f:\n    WEIGHTS = json.load(f)",
    "metadata": {
     "cell_id": "aae26334-c33d-446f-a923-e862fe6e2f08",
     "tags": [],
@@ -40,12 +39,12 @@
     "deepnote_cell_type": "code",
     "deepnote_cell_height": 117
    },
-   "outputs": [],
-   "execution_count": 2
+   "source": "PRODUCTS = pd.read_csv(\"/work/games_seeker/data/interim/pc_components.csv\", sep=\"|\")\nwith open(\"/work/games_seeker/data/interim/products_weights.json\", \"r\") as f:\n    WEIGHTS = json.load(f)",
+   "execution_count": null,
+   "outputs": []
   },
   {
    "cell_type": "code",
-   "source": "PRODUCTS",
    "metadata": {
     "cell_id": "2eb6d3da-d29b-4f7d-a304-daec6dcecc90",
     "tags": [],
@@ -56,6 +55,8 @@
     "deepnote_cell_type": "code",
     "deepnote_cell_height": 598
    },
+   "source": "PRODUCTS",
+   "execution_count": null,
    "outputs": [
     {
      "output_type": "execute_result",
@@ -396,12 +397,10 @@
      },
      "metadata": {}
     }
-   ],
-   "execution_count": 3
+   ]
   },
   {
    "cell_type": "code",
-   "source": "WEIGHTS.keys()",
    "metadata": {
     "cell_id": "1d4dd22b-88b5-41a0-8392-6fddcf70b4ea",
     "tags": [],
@@ -415,6 +414,8 @@
      21.1875
     ]
    },
+   "source": "WEIGHTS.keys()",
+   "execution_count": null,
    "outputs": [
     {
      "output_type": "execute_result",
@@ -424,8 +425,7 @@
      },
      "metadata": {}
     }
-   ],
-   "execution_count": 4
+   ]
   },
   {
    "cell_type": "markdown",
@@ -440,7 +440,6 @@
   },
   {
    "cell_type": "code",
-   "source": "PRESUPUESTO = 2900\nCOMPONENTS_ORDER = (\"CPU\", \"Mother Board\", \"RAM\", \"Storage\", \"GPU\", \"Refrigeration\", \"Power Supply\", \"Chasis\")",
    "metadata": {
     "cell_id": "2599051a-d0e5-4901-8c17-a5831dc41f71",
     "tags": [],
@@ -451,8 +450,9 @@
     "deepnote_cell_type": "code",
     "deepnote_cell_height": 99
    },
-   "outputs": [],
-   "execution_count": 5
+   "source": "PRESUPUESTO = 2900\nCOMPONENTS_ORDER = (\"CPU\", \"Mother Board\", \"RAM\", \"Storage\", \"GPU\", \"Refrigeration\", \"Power Supply\", \"Chasis\")",
+   "execution_count": null,
+   "outputs": []
   },
   {
    "cell_type": "markdown",
@@ -467,7 +467,6 @@
   },
   {
    "cell_type": "code",
-   "source": "PRODUCTS[\"type\"].unique()",
    "metadata": {
     "cell_id": "8c593f7a-9532-4d56-96e8-93c53b08986f",
     "tags": [],
@@ -481,6 +480,8 @@
      40.375
     ]
    },
+   "source": "PRODUCTS[\"type\"].unique()",
+   "execution_count": null,
    "outputs": [
     {
      "output_type": "execute_result",
@@ -490,12 +491,10 @@
      },
      "metadata": {}
     }
-   ],
-   "execution_count": 6
+   ]
   },
   {
    "cell_type": "code",
-   "source": "def create_individual():\n    return [\n        random.choice(PRODUCTS[PRODUCTS[\"type\"] == product].index)\n        for product in COMPONENTS_ORDER\n    ]",
    "metadata": {
     "cell_id": "cf89123a-a57b-4740-8352-f4d4c29f1cd2",
     "tags": [],
@@ -506,12 +505,12 @@
     "deepnote_cell_type": "code",
     "deepnote_cell_height": 153
    },
-   "outputs": [],
-   "execution_count": 7
+   "source": "def create_individual():\n    return [\n        random.choice(PRODUCTS[PRODUCTS[\"type\"] == product].index)\n        for product in COMPONENTS_ORDER\n    ]",
+   "execution_count": null,
+   "outputs": []
   },
   {
    "cell_type": "code",
-   "source": "create_individual()",
    "metadata": {
     "cell_id": "9056a513-ced5-4803-8083-e212c6331f69",
     "tags": [],
@@ -525,6 +524,8 @@
      21.1875
     ]
    },
+   "source": "create_individual()",
+   "execution_count": null,
    "outputs": [
     {
      "output_type": "execute_result",
@@ -534,12 +535,10 @@
      },
      "metadata": {}
     }
-   ],
-   "execution_count": 8
+   ]
   },
   {
    "cell_type": "code",
-   "source": "def register_initial_components():\n    for _class in (\"FitnessMax\", \"Individual\"):\n        if _class in dir(creator):\n            delattr(creator, _class)\n\n    creator.create(\"FitnessMax\", base.Fitness, weights=(1.0,))\n    creator.create(\"Individual\", list, fitness=creator.FitnessMax)\n\n    toolbox = base.Toolbox()\n\n    # Generación del individuo\n    toolbox.register(\"indices\", create_individual)\n    toolbox.register(\"individual\", tools.initIterate, creator.Individual, toolbox.indices)\n    toolbox.register(\"population\", tools.initRepeat, list, toolbox.individual)\n\n    return toolbox",
    "metadata": {
     "cell_id": "3631aa65-7144-43d1-83c1-17be64683b48",
     "tags": [],
@@ -550,12 +549,12 @@
     "deepnote_cell_type": "code",
     "deepnote_cell_height": 351
    },
-   "outputs": [],
-   "execution_count": 9
+   "source": "def register_initial_components():\n    for _class in (\"FitnessMax\", \"Individual\"):\n        if _class in dir(creator):\n            delattr(creator, _class)\n\n    creator.create(\"FitnessMax\", base.Fitness, weights=(1.0,))\n    creator.create(\"Individual\", list, fitness=creator.FitnessMax)\n\n    toolbox = base.Toolbox()\n\n    # Generación del individuo\n    toolbox.register(\"indices\", create_individual)\n    toolbox.register(\"individual\", tools.initIterate, creator.Individual, toolbox.indices)\n    toolbox.register(\"population\", tools.initRepeat, list, toolbox.individual)\n\n    return toolbox",
+   "execution_count": null,
+   "outputs": []
   },
   {
    "cell_type": "code",
-   "source": "def eval_budget(individual):\n    \"\"\"Funcion objetivo, calcula el valor de los componentes\"\"\"\n    prices = [PRODUCTS.loc[idx, \"price\"] for idx in individual]\n    total =  sum(prices)\n    _, counts = np.unique(individual, return_counts=True)\n    if not all(counts == 1):\n        return -1,\n    return (total,) if total <= PRESUPUESTO else (-1,)",
    "metadata": {
     "cell_id": "ccf803c2-3402-4db8-b125-df4023984801",
     "tags": [],
@@ -566,12 +565,12 @@
     "deepnote_cell_type": "code",
     "deepnote_cell_height": 207
    },
-   "outputs": [],
-   "execution_count": 10
+   "source": "def eval_budget(individual):\n    \"\"\"Funcion objetivo, calcula el valor de los componentes\"\"\"\n    prices = [PRODUCTS.loc[idx, \"price\"] for idx in individual]\n    total =  sum(prices)\n    _, counts = np.unique(individual, return_counts=True)\n    if not all(counts == 1):\n        return -1,\n    return (total,) if total <= PRESUPUESTO else (-1,)",
+   "execution_count": null,
+   "outputs": []
   },
   {
    "cell_type": "code",
-   "source": "def register_genetic_operators(toolbox):\n    toolbox.register(\"mate\", tools.cxOnePoint)\n    toolbox.register(\"mutate\", tools.mutFlipBit, indpb=0.1)\n    toolbox.register(\"select\", tools.selTournament, tournsize=3)\n    toolbox.register(\"evaluate\", eval_budget)\n    return toolbox\n",
    "metadata": {
     "cell_id": "34f71e49-d794-43c4-a368-63ef7040aab1",
     "tags": [],
@@ -582,12 +581,12 @@
     "deepnote_cell_type": "code",
     "deepnote_cell_height": 189
    },
-   "outputs": [],
-   "execution_count": 11
+   "source": "def register_genetic_operators(toolbox):\n    toolbox.register(\"mate\", tools.cxOnePoint)\n    toolbox.register(\"mutate\", tools.mutFlipBit, indpb=0.1)\n    toolbox.register(\"select\", tools.selTournament, tournsize=3)\n    toolbox.register(\"evaluate\", eval_budget)\n    return toolbox\n",
+   "execution_count": null,
+   "outputs": []
   },
   {
    "cell_type": "code",
-   "source": "def plot_evolution(log):\n    gen = log.select(\"gen\")\n    fit_mins = log.select(\"min\")\n    fit_maxs = log.select(\"max\")\n    fit_avg = log.select(\"avg\")\n\n    fig, ax1 = plt.subplots(figsize=(8,8))\n    ax1.plot(gen, fit_mins, \"b\")\n    ax1.plot(gen, fit_maxs, \"r\")\n    ax1.plot(gen, fit_avg, \"--k\")\n    ax1.fill_between(gen , fit_mins , fit_maxs, facecolor='g', alpha = 0.2)\n    ax1.set_title(\"Maximizar compra PC segun presupuesto mediante algoritmos geneticos\")\n    ax1.set_xlabel(\"Generation\")\n    ax1.set_ylabel(\"Fitness\")\n    ax1.legend ([\"Min\", \"Max\", \"Avg\"], loc=\"upper right\")\n    plt.grid(True)",
    "metadata": {
     "cell_id": "f816b52c-0eb4-4e31-9bc9-2a870c53ee3c",
     "tags": [],
@@ -598,12 +597,12 @@
     "deepnote_cell_type": "code",
     "deepnote_cell_height": 351
    },
-   "outputs": [],
-   "execution_count": 12
+   "source": "def plot_evolution(log):\n    gen = log.select(\"gen\")\n    fit_mins = log.select(\"min\")\n    fit_maxs = log.select(\"max\")\n    fit_avg = log.select(\"avg\")\n\n    fig, ax1 = plt.subplots(figsize=(8,8))\n    ax1.plot(gen, fit_mins, \"b\")\n    ax1.plot(gen, fit_maxs, \"r\")\n    ax1.plot(gen, fit_avg, \"--k\")\n    ax1.fill_between(gen , fit_mins , fit_maxs, facecolor='g', alpha = 0.2)\n    ax1.set_title(\"Maximizar compra PC segun presupuesto mediante algoritmos geneticos\")\n    ax1.set_xlabel(\"Generation\")\n    ax1.set_ylabel(\"Fitness\")\n    ax1.legend ([\"Min\", \"Max\", \"Avg\"], loc=\"upper right\")\n    plt.grid(True)",
+   "execution_count": null,
+   "outputs": []
   },
   {
    "cell_type": "code",
-   "source": "def simulate(toolbox, CXPB, MUTPB, NGEN, NIND=50, verbose=False, **kwargs):\n    pop = toolbox.population(NIND)\n    hof = tools.HallOfFame(1)\n\n    stats = tools.Statistics(lambda ind: ind.fitness.values)\n    stats.register(\"avg\", np.mean)\n    stats.register(\"std\", np.std)\n    stats.register(\"min\", np.min)\n    stats.register(\"max\", np.max)\n\n    pop, logbook = algorithms.eaSimple(\n        pop,\n        toolbox,\n        CXPB,\n        MUTPB,\n        NGEN,\n        stats=stats,\n        halloffame=hof,\n        verbose=verbose\n    )\n    return pop, logbook",
    "metadata": {
     "cell_id": "1d12476a-fe80-442f-8a29-fc2f5af3ff92",
     "tags": [],
@@ -614,12 +613,12 @@
     "deepnote_cell_type": "code",
     "deepnote_cell_height": 441
    },
-   "outputs": [],
-   "execution_count": 13
+   "source": "def simulate(toolbox, CXPB, MUTPB, NGEN, NIND=50, verbose=False, **kwargs):\n    pop = toolbox.population(NIND)\n    hof = tools.HallOfFame(1)\n\n    stats = tools.Statistics(lambda ind: ind.fitness.values)\n    stats.register(\"avg\", np.mean)\n    stats.register(\"std\", np.std)\n    stats.register(\"min\", np.min)\n    stats.register(\"max\", np.max)\n\n    pop, logbook = algorithms.eaSimple(\n        pop,\n        toolbox,\n        CXPB,\n        MUTPB,\n        NGEN,\n        stats=stats,\n        halloffame=hof,\n        verbose=verbose\n    )\n    return pop, logbook",
+   "execution_count": null,
+   "outputs": []
   },
   {
    "cell_type": "code",
-   "source": "def run(cases):\n    random.seed(100)\n    results = []\n    results_logs = {idx+1: [] for idx in range(len(cases))}\n    for idx, case in enumerate(cases):\n        toolbox = register_initial_components()\n        toolbox = register_genetic_operators(toolbox)\n        for i in range(10):\n            t0 = time()\n            best, log = simulate(toolbox, **case)\n            results.append([idx+1, i, case[\"NIND\"], case[\"CXPB\"],\n                case[\"MUTPB\"], case[\"NGEN\"], best[0].fitness.values[0], best[0], round(time()-t0, 4)]\n            )\n            results_logs[idx+1].append(log)\n            print(f\"Case {idx+1}: {(i+1)*10}%\")\n\n    return pd.DataFrame(results, columns=[\"Test ID\", \"Try\", \"Population\", \"CXPB\", \"MUTPB\", \"NGEN\", \"Best Fitness\", \"Best\", \"Time\"]), results_logs",
    "metadata": {
     "cell_id": "f3a9e957-7015-44b8-ba3a-bab26f4eb9f9",
     "tags": [],
@@ -630,12 +629,12 @@
     "deepnote_cell_type": "code",
     "deepnote_cell_height": 369
    },
-   "outputs": [],
-   "execution_count": 14
+   "source": "def run(cases):\n    random.seed(100)\n    results = []\n    results_logs = {idx+1: [] for idx in range(len(cases))}\n    for idx, case in enumerate(cases):\n        toolbox = register_initial_components()\n        toolbox = register_genetic_operators(toolbox)\n        for i in range(10):\n            t0 = time()\n            best, log = simulate(toolbox, **case)\n            results.append([idx+1, i, case[\"NIND\"], case[\"CXPB\"],\n                case[\"MUTPB\"], case[\"NGEN\"], best[0].fitness.values[0], best[0], round(time()-t0, 4)]\n            )\n            results_logs[idx+1].append(log)\n            print(f\"Case {idx+1}: {(i+1)*10}%\")\n\n    return pd.DataFrame(results, columns=[\"Test ID\", \"Try\", \"Population\", \"CXPB\", \"MUTPB\", \"NGEN\", \"Best Fitness\", \"Best\", \"Time\"]), results_logs",
+   "execution_count": null,
+   "outputs": []
   },
   {
    "cell_type": "code",
-   "source": "cases = (\n    {\"CXPB\":0.8, \"MUTPB\":0.2, \"NGEN\":50, \"NIND\":100},\n    # {\"CXPB\":0.4, \"MUTPB\":0.6, \"NGEN\":50, \"NIND\":100},\n    # {\"CXPB\":0.2, \"MUTPB\":0.2, \"NGEN\":50, \"NIND\":100},\n    # {\"CXPB\":0.3, \"MUTPB\":0.7, \"NGEN\":50, \"NIND\":100},\n    # {\"CXPB\":0.6, \"MUTPB\":0.4, \"NGEN\":50, \"NIND\":100},\n)",
    "metadata": {
     "cell_id": "a206d231-03e6-49f0-a8d6-81f80ec698a1",
     "tags": [],
@@ -646,12 +645,12 @@
     "deepnote_cell_type": "code",
     "deepnote_cell_height": 189
    },
-   "outputs": [],
-   "execution_count": 23
+   "source": "cases = (\n    {\"CXPB\":0.8, \"MUTPB\":0.2, \"NGEN\":50, \"NIND\":100},\n    {\"CXPB\":0.4, \"MUTPB\":0.6, \"NGEN\":50, \"NIND\":100},\n    {\"CXPB\":0.2, \"MUTPB\":0.2, \"NGEN\":50, \"NIND\":100},\n    {\"CXPB\":0.3, \"MUTPB\":0.7, \"NGEN\":50, \"NIND\":100},\n    {\"CXPB\":0.6, \"MUTPB\":0.4, \"NGEN\":50, \"NIND\":100},\n)",
+   "execution_count": null,
+   "outputs": []
   },
   {
    "cell_type": "code",
-   "source": "cases_result, logs = run(cases)",
    "metadata": {
     "cell_id": "97deb54e-d17b-4624-96ef-abb319eea63c",
     "tags": [],
@@ -660,24 +659,20 @@
     "execution_start": 1647057873959,
     "execution_millis": 17796,
     "deepnote_cell_type": "code",
-    "deepnote_cell_height": 293.875,
-    "deepnote_output_heights": [
-     611,
-     611
-    ]
+    "deepnote_cell_height": 293.875
    },
+   "source": "cases_result, logs = run(cases)",
+   "execution_count": null,
    "outputs": [
     {
      "name": "stdout",
      "text": "Case 1: 10%\nCase 1: 20%\nCase 1: 30%\nCase 1: 40%\nCase 1: 50%\nCase 1: 60%\nCase 1: 70%\nCase 1: 80%\nCase 1: 90%\nCase 1: 100%\n",
      "output_type": "stream"
     }
-   ],
-   "execution_count": 24
+   ]
   },
   {
    "cell_type": "code",
-   "source": "cases_result[cases_result[\"Best Fitness\"] > 0]",
    "metadata": {
     "cell_id": "ea5cfd89-5fb9-4e0c-9da6-adb5adabfd40",
     "tags": [],
@@ -701,6 +696,8 @@
     "deepnote_cell_type": "code",
     "deepnote_cell_height": 630
    },
+   "source": "cases_result[cases_result[\"Best Fitness\"] > 0]",
+   "execution_count": null,
    "outputs": [
     {
      "output_type": "execute_result",
@@ -1361,12 +1358,10 @@
      },
      "metadata": {}
     }
-   ],
-   "execution_count": 25
+   ]
   },
   {
    "cell_type": "code",
-   "source": "plot_evolution(logs[1][1])",
    "metadata": {
     "cell_id": "ae670724-05b2-4cd3-8208-62bf1dbbf07f",
     "tags": [],
@@ -1380,6 +1375,8 @@
      498
     ]
    },
+   "source": "plot_evolution(logs[1][1])",
+   "execution_count": null,
    "outputs": [
     {
      "data": {
@@ -1395,12 +1392,10 @@
      },
      "output_type": "display_data"
     }
-   ],
-   "execution_count": 22
+   ]
   },
   {
    "cell_type": "code",
-   "source": "PRODUCTS.iloc[[655, 693, 593, 207, 297, 427, 337, 27], :]",
    "metadata": {
     "cell_id": "eeb4c823-529e-4bc7-b5fe-9f1e1921895f",
     "tags": [],
@@ -1411,6 +1406,8 @@
     "deepnote_cell_type": "code",
     "deepnote_cell_height": 533
    },
+   "source": "PRODUCTS.iloc[[655, 693, 593, 207, 297, 427, 337, 27], :]",
+   "execution_count": null,
    "outputs": [
     {
      "output_type": "execute_result",
@@ -1729,12 +1726,10 @@
      },
      "metadata": {}
     }
-   ],
-   "execution_count": 26
+   ]
   },
   {
    "cell_type": "code",
-   "source": "",
    "metadata": {
     "cell_id": "846f0b16-e5f3-4bde-a5b7-315008674043",
     "tags": [],
@@ -1745,8 +1740,9 @@
     "deepnote_cell_type": "code",
     "deepnote_cell_height": 81
    },
-   "outputs": [],
-   "execution_count": 19
+   "source": "",
+   "execution_count": null,
+   "outputs": []
   },
   {
    "cell_type": "markdown",
