diffuse logic skill

--- a/notebooks/learning_skill/01_preprocessing.ipynb
+++ b/notebooks/learning_skill/01_preprocessing.ipynb
@@ -9,11 +9,12 @@
     "source_hash": "9aa7b83e",
     "execution_start": 1648412528810,
     "execution_millis": 1691,
+    "owner_user_id": "62e199ca-01f6-4bbc-8362-fc86c29586af",
     "deepnote_cell_type": "code",
     "deepnote_cell_height": 189
    },
    "source": "import numpy as np\nimport pandas as pd\n\nfrom sklearn import preprocessing\nfrom sklearn.cluster import KMeans\nfrom sklearn import metrics, tree\nfrom pickle import dump",
-   "execution_count": 1,
+   "execution_count": null,
    "outputs": []
   },
   {
@@ -28,7 +29,6 @@
   },
   {
    "cell_type": "code",
-   "source": "df = pd.read_csv(\"../../data/interim/types_of_pc.csv\", sep=\"|\")",
    "metadata": {
     "cell_id": "4accac460b74469380dca6d34551f478",
     "tags": [],
@@ -39,12 +39,12 @@
     "deepnote_cell_type": "code",
     "deepnote_cell_height": 81
    },
-   "outputs": [],
-   "execution_count": 2
+   "source": "df = pd.read_csv(\"../../data/interim/types_of_pc.csv\", sep=\"|\")",
+   "execution_count": null,
+   "outputs": []
   },
   {
    "cell_type": "code",
-   "source": "df",
    "metadata": {
     "cell_id": "17cbfebc30d7438d8a49f4d3ae12ed35",
     "tags": [],
@@ -53,8 +53,10 @@
     "execution_start": 1648412532443,
     "execution_millis": 364,
     "deepnote_cell_type": "code",
-    "deepnote_cell_height": 598
+    "deepnote_cell_height": 600
    },
+   "source": "df",
+   "execution_count": null,
    "outputs": [
     {
      "output_type": "execute_result",
@@ -233,8 +235,7 @@
      },
      "metadata": {}
     }
-   ],
-   "execution_count": 3
+   ]
   },
   {
    "cell_type": "markdown",
@@ -248,7 +249,6 @@
   },
   {
    "cell_type": "code",
-   "source": "cpu_label_encoder = preprocessing.LabelEncoder()\ncpu_label_encoder.fit(df[\"CPU_SERIE\"])\ndump(cpu_label_encoder, open('/work/games_seeker/models/cpu_serie_encoder.pkl', 'wb'))\nencoder_cpu_serie = cpu_label_encoder.transform(df[\"CPU_SERIE\"])",
    "metadata": {
     "cell_id": "6edb692420e94928b53b68827c9fe176",
     "tags": [],
@@ -259,12 +259,12 @@
     "deepnote_cell_type": "code",
     "deepnote_cell_height": 135
    },
-   "outputs": [],
-   "execution_count": 4
+   "source": "cpu_label_encoder = preprocessing.LabelEncoder()\ncpu_label_encoder.fit(df[\"CPU_SERIE\"])\ndump(cpu_label_encoder, open('/work/games_seeker/models/cpu_serie_encoder.pkl', 'wb'))\nencoder_cpu_serie = cpu_label_encoder.transform(df[\"CPU_SERIE\"])",
+   "execution_count": null,
+   "outputs": []
   },
   {
    "cell_type": "code",
-   "source": "target_label_encoder = preprocessing.LabelEncoder()\ntarget_label_encoder.fit(df[\"TARGET\"])\ndump(target_label_encoder, open('/work/games_seeker/models/target_encoder.pkl', 'wb'))\nencoder_target = target_label_encoder.transform(df[\"TARGET\"])",
    "metadata": {
     "cell_id": "2f507baba23445abac673b012218b179",
     "tags": [],
@@ -275,12 +275,12 @@
     "deepnote_cell_type": "code",
     "deepnote_cell_height": 135
    },
-   "outputs": [],
-   "execution_count": 5
+   "source": "target_label_encoder = preprocessing.LabelEncoder()\ntarget_label_encoder.fit(df[\"TARGET\"])\ndump(target_label_encoder, open('/work/games_seeker/models/target_encoder.pkl', 'wb'))\nencoder_target = target_label_encoder.transform(df[\"TARGET\"])",
+   "execution_count": null,
+   "outputs": []
   },
   {
    "cell_type": "code",
-   "source": "df[\"CPU_SERIE\"] = encoder_cpu_serie\ndf[\"TARGET\"] = encoder_target",
    "metadata": {
     "cell_id": "7cd21356a74a4fd8a7387fd6ad488cc6",
     "tags": [],
@@ -289,17 +289,14 @@
     "execution_start": 1648412534583,
     "execution_millis": 51,
     "deepnote_cell_type": "code",
-    "deepnote_cell_height": 99,
-    "deepnote_output_heights": [
-     21.1875
-    ]
+    "deepnote_cell_height": 99
    },
-   "outputs": [],
-   "execution_count": 6
+   "source": "df[\"CPU_SERIE\"] = encoder_cpu_serie\ndf[\"TARGET\"] = encoder_target",
+   "execution_count": null,
+   "outputs": []
   },
   {
    "cell_type": "code",
-   "source": "target_label_encoder.transform([\"Gamer\", \"Ofimatica\", \"Diseño\"])",
    "metadata": {
     "cell_id": "f158fb0c44e2456a9fdd77866b554082",
     "tags": [],
@@ -313,6 +310,8 @@
      21.1875
     ]
    },
+   "source": "target_label_encoder.transform([\"Gamer\", \"Ofimatica\", \"Diseño\"])",
+   "execution_count": null,
    "outputs": [
     {
      "output_type": "execute_result",
@@ -322,12 +321,10 @@
      },
      "metadata": {}
     }
-   ],
-   "execution_count": 7
+   ]
   },
   {
    "cell_type": "code",
-   "source": "df",
    "metadata": {
     "cell_id": "29fc040884cd4b2b802789b523a0ec12",
     "tags": [],
@@ -343,8 +340,10 @@
     },
     "deepnote_table_loading": false,
     "deepnote_cell_type": "code",
-    "deepnote_cell_height": 598
+    "deepnote_cell_height": 600
    },
+   "source": "df",
+   "execution_count": null,
    "outputs": [
     {
      "output_type": "execute_result",
@@ -523,12 +522,10 @@
      },
      "metadata": {}
     }
-   ],
-   "execution_count": 8
+   ]
   },
   {
    "cell_type": "code",
-   "source": "df.to_csv(\"../../data/processed/types_of_pc.csv\", sep = \"|\")",
    "metadata": {
     "cell_id": "eeefba8d31c34af6aae6987c573552de",
     "tags": [],
@@ -539,12 +536,12 @@
     "deepnote_cell_type": "code",
     "deepnote_cell_height": 81
    },
-   "outputs": [],
-   "execution_count": 9
+   "source": "df.to_csv(\"../../data/processed/types_of_pc.csv\", sep = \"|\")",
+   "execution_count": null,
+   "outputs": []
   },
   {
    "cell_type": "code",
-   "source": "X_COLUMNS = ['CPU', 'CPU_GEN', 'CPU_SERIE', 'RAM', 'GPU', 'GPU_TI', 'HDD', 'SSD']\nY_COLUMN = [\"TARGET\"]",
    "metadata": {
     "cell_id": "d92de6ec5ffe4bfdbcc067aaf4e9090c",
     "tags": [],
@@ -555,12 +552,12 @@
     "deepnote_cell_type": "code",
     "deepnote_cell_height": 99
    },
-   "outputs": [],
-   "execution_count": 10
+   "source": "X_COLUMNS = ['CPU', 'CPU_GEN', 'CPU_SERIE', 'RAM', 'GPU', 'GPU_TI', 'HDD', 'SSD']\nY_COLUMN = [\"TARGET\"]",
+   "execution_count": null,
+   "outputs": []
   },
   {
    "cell_type": "code",
-   "source": "x = df[X_COLUMNS].values\nx",
    "metadata": {
     "cell_id": "478a2a19a3744a17952bbd6029cb3985",
     "tags": [],
@@ -574,6 +571,8 @@
      136.3125
     ]
    },
+   "source": "x = df[X_COLUMNS].values\nx",
+   "execution_count": null,
    "outputs": [
     {
      "output_type": "execute_result",
@@ -583,12 +582,10 @@
      },
      "metadata": {}
     }
-   ],
-   "execution_count": 11
+   ]
   },
   {
    "cell_type": "code",
-   "source": "y = df[Y_COLUMN]\ny",
    "metadata": {
     "cell_id": "c7d189639f314c76aa8e4e7a1ee35a73",
     "tags": [],
@@ -604,11 +601,10 @@
     },
     "deepnote_table_loading": false,
     "deepnote_cell_type": "code",
-    "deepnote_cell_height": 616,
-    "deepnote_output_heights": [
-     136.3125
-    ]
+    "deepnote_cell_height": 618
    },
+   "source": "y = df[Y_COLUMN]\ny",
+   "execution_count": null,
    "outputs": [
     {
      "output_type": "execute_result",
@@ -675,12 +671,10 @@
      },
      "metadata": {}
     }
-   ],
-   "execution_count": 12
+   ]
   },
   {
    "cell_type": "code",
-   "source": "y = [i[0] for i in y.values]",
    "metadata": {
     "cell_id": "f09408ea30984879a9078a6646da5516",
     "tags": [],
@@ -689,13 +683,11 @@
     "execution_start": 1648412547230,
     "execution_millis": 947,
     "deepnote_cell_type": "code",
-    "deepnote_cell_height": 81,
-    "deepnote_output_heights": [
-     136.3125
-    ]
+    "deepnote_cell_height": 81
    },
-   "outputs": [],
-   "execution_count": 13
+   "source": "y = [i[0] for i in y.values]",
+   "execution_count": null,
+   "outputs": []
   },
   {
    "cell_type": "markdown",
@@ -709,7 +701,6 @@
   },
   {
    "cell_type": "code",
-   "source": "kmeans_model = KMeans(n_clusters=3)",
    "metadata": {
     "cell_id": "243983657e13464395ed9afb449cbd36",
     "tags": [],
@@ -720,12 +711,12 @@
     "deepnote_cell_type": "code",
     "deepnote_cell_height": 81
    },
-   "outputs": [],
-   "execution_count": 14
+   "source": "kmeans_model = KMeans(n_clusters=3)",
+   "execution_count": null,
+   "outputs": []
   },
   {
    "cell_type": "code",
-   "source": "kmeans_model.fit(x)",
    "metadata": {
     "cell_id": "04403884766e45f6975b8edd05c9792c",
     "tags": [],
@@ -739,6 +730,8 @@
      21.1875
     ]
    },
+   "source": "kmeans_model.fit(x)",
+   "execution_count": null,
    "outputs": [
     {
      "output_type": "execute_result",
@@ -748,12 +741,10 @@
      },
      "metadata": {}
     }
-   ],
-   "execution_count": 15
+   ]
   },
   {
    "cell_type": "code",
-   "source": "y_kmeans = kmeans_model.predict(x)",
    "metadata": {
     "cell_id": "a11fad96d9444cd8b0d306170abd2f81",
     "tags": [],
@@ -764,12 +755,12 @@
     "deepnote_cell_type": "code",
     "deepnote_cell_height": 81
    },
-   "outputs": [],
-   "execution_count": 16
+   "source": "y_kmeans = kmeans_model.predict(x)",
+   "execution_count": null,
+   "outputs": []
   },
   {
    "cell_type": "code",
-   "source": "accuracy = metrics.adjusted_rand_score(y, y_kmeans)",
    "metadata": {
     "cell_id": "43a12fce318048d687d9be509cc47224",
     "tags": [],
@@ -778,13 +769,11 @@
     "execution_start": 1648412563453,
     "execution_millis": 936,
     "deepnote_cell_type": "code",
-    "deepnote_cell_height": 81,
-    "deepnote_output_heights": [
-     21.1875
-    ]
+    "deepnote_cell_height": 81
    },
-   "outputs": [],
-   "execution_count": 17
+   "source": "accuracy = metrics.adjusted_rand_score(y, y_kmeans)",
+   "execution_count": null,
+   "outputs": []
   },
   {
    "cell_type": "markdown",
@@ -798,7 +787,6 @@
   },
   {
    "cell_type": "code",
-   "source": "tree_model = tree.DecisionTreeClassifier()",
    "metadata": {
     "cell_id": "f58c2f1ffb394ac682cd17a80ae1fd8d",
     "tags": [],
@@ -807,17 +795,14 @@
     "execution_start": 1648412564409,
     "execution_millis": 23,
     "deepnote_cell_type": "code",
-    "deepnote_cell_height": 81,
-    "deepnote_output_heights": [
-     21.1875
-    ]
+    "deepnote_cell_height": 81
    },
-   "outputs": [],
-   "execution_count": 18
+   "source": "tree_model = tree.DecisionTreeClassifier()",
+   "execution_count": null,
+   "outputs": []
   },
   {
    "cell_type": "code",
-   "source": "tree_model = tree_model.fit(x, y)",
    "metadata": {
     "cell_id": "d801396ec0c74eeca9b4340fd759aa3b",
     "tags": [],
@@ -828,12 +813,12 @@
     "deepnote_cell_type": "code",
     "deepnote_cell_height": 81
    },
-   "outputs": [],
-   "execution_count": 19
+   "source": "tree_model = tree_model.fit(x, y)",
+   "execution_count": null,
+   "outputs": []
   },
   {
    "cell_type": "code",
-   "source": "tree_model.score(x, y)",
    "metadata": {
     "cell_id": "efa763e42e594514b8c041562adf6adf",
     "tags": [],
@@ -847,6 +832,8 @@
      21.1875
     ]
    },
+   "source": "tree_model.score(x, y)",
+   "execution_count": null,
    "outputs": [
     {
      "output_type": "execute_result",
@@ -856,12 +843,10 @@
      },
      "metadata": {}
     }
-   ],
-   "execution_count": 20
+   ]
   },
   {
    "cell_type": "code",
-   "source": "tree_model.predict([[5, 11, 1, 32, 1050, 1, 2048, 2048]])",
    "metadata": {
     "cell_id": "81c1270e765b4e638f30222c33ed5a69",
     "tags": [],
@@ -875,6 +860,8 @@
      21.1875
     ]
    },
+   "source": "tree_model.predict([[5, 11, 1, 32, 1050, 1, 2048, 2048]])",
+   "execution_count": null,
    "outputs": [
     {
      "output_type": "execute_result",
@@ -884,12 +871,10 @@
      },
      "metadata": {}
     }
-   ],
-   "execution_count": 21
+   ]
   },
   {
    "cell_type": "code",
-   "source": "dump(tree_model, open('/work/games_seeker/models/model.pkl', 'wb'))",
    "metadata": {
     "cell_id": "593b2725f7c14e68a02e5179aef311d4",
     "tags": [],
@@ -900,12 +885,12 @@
     "deepnote_cell_type": "code",
     "deepnote_cell_height": 81
    },
-   "outputs": [],
-   "execution_count": 22
+   "source": "dump(tree_model, open('/work/games_seeker/models/model.pkl', 'wb'))",
+   "execution_count": null,
+   "outputs": []
   },
   {
    "cell_type": "code",
-   "source": "",
    "metadata": {
     "cell_id": "09f6d041f1634b0086f825df86a32097",
     "tags": [],
@@ -915,8 +900,9 @@
     "deepnote_cell_type": "code",
     "deepnote_cell_height": 81
    },
-   "outputs": [],
-   "execution_count": 22
+   "source": "",
+   "execution_count": null,
+   "outputs": []
   },
   {
    "cell_type": "markdown",
